// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InboxScreen Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="page lists-show"
  >
    <nav>
      <h1
        className="title-page"
      >
        <span
          className="title-wrapper"
        >
          Taskbox
        </span>
      </h1>
    </nav>
    <div
      className="list-items"
    >
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something more"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something more"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something else"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something else"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something again"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something again"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InboxScreen Error 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="page lists-show"
  >
    <nav>
      <h1
        className="title-page"
      >
        <span
          className="title-wrapper"
        >
          Taskbox
        </span>
      </h1>
    </nav>
    <div
      className="list-items"
    >
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something more"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something more"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something else"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something else"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        className="list-item TASK_INBOX"
      >
        <label
          className="checkbox"
        >
          <input
            checked={false}
            disabled={false}
            name="Something again"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
        <div
          className="title"
        >
          <input
            placeholder="Input title"
            readOnly={true}
            type="text"
            value="Something again"
          />
        </div>
        <div
          className="actions"
          onClick={[Function]}
        >
          <a
            onClick={[Function]}
          >
            <span
              className="icon-star"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 1"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 2"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 3"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 4"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 5"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 6"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Take it easy for the rest of the evening.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 6 (pinned)"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 1"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 2"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 3"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 4"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          checked={false}
          disabled={false}
          name="Task 5"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
